--- a/pyanaconda/ui/gui/hubs/progress.ui
+++ b/pyanaconda/ui/gui/hubs/progress.ui
@@ -5,7 +5,6 @@
   <object class="AnacondaHubWindow" id="progressWindow">
     <property name="startup_id">filler</property>
     <property name="can_focus">False</property>
-    <property name="border_width">6</property>
     <property name="startup_id">filler</property>
     <property name="window_name">PERSONALIZATION</property>
     <child internal-child="main_box">
@@ -15,6 +14,9 @@
         <child internal-child="nav_area">
           <object class="GtkGrid" id="AnacondaHubWindow-nav_area1">
             <property name="can_focus">False</property>
+            <child>
+              <placeholder/>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -25,6 +27,9 @@
         <child internal-child="alignment">
           <object class="GtkAlignment" id="AnacondaHubWindow-alignment1">
             <property name="can_focus">False</property>
+            <property name="yalign">0</property>
+            <property name="xscale">0.5</property>
+            <property name="yscale">0.5</property>
             <child internal-child="action_area">
               <object class="GtkBox" id="progressWindow-actionArea">
                 <property name="can_focus">False</property>
