--- a/pyanaconda/ui/gui/spokes/language.ui
+++ b/pyanaconda/ui/gui/spokes/language.ui
@@ -160,7 +160,6 @@
   <object class="AnacondaSpokeWindow" id="languageWindow">
     <property name="startup_id">filler</property>
     <property name="can_focus">False</property>
-    <property name="border_width">6</property>
     <property name="startup_id">filler</property>
     <property name="mnemonics_visible">False</property>
     <property name="focus_visible">False</property>
@@ -183,6 +182,9 @@
         <child internal-child="alignment">
           <object class="GtkAlignment" id="AnacondaSpokeWindow-alignment1">
             <property name="can_focus">False</property>
+            <property name="yalign">0</property>
+            <property name="xscale">0</property>
+            <property name="yscale">0.5</property>
             <child internal-child="action_area">
               <object class="GtkBox" id="languageWindow-actionArea">
                 <property name="can_focus">False</property>
