--- a/pyanaconda/ui/gui/spokes/software.ui
+++ b/pyanaconda/ui/gui/spokes/software.ui
@@ -25,7 +25,6 @@
   <object class="AnacondaSpokeWindow" id="softwareWindow">
     <property name="startup_id">filler</property>
     <property name="can_focus">False</property>
-    <property name="border_width">6</property>
     <property name="startup_id">filler</property>
     <property name="window_name">SOFTWARE SELECTION</property>
     <signal name="back-clicked" handler="on_back_clicked" swapped="no"/>
@@ -101,6 +100,9 @@
                                     <property name="headers_visible">False</property>
                                     <property name="headers_clickable">False</property>
                                     <property name="search_column">0</property>
+                                    <child internal-child="selection">
+                                      <object class="GtkTreeSelection" id="treeview-selection1"/>
+                                    </child>
                                     <child>
                                       <object class="GtkTreeViewColumn" id="desktopDescCol">
                                         <property name="title" translatable="yes">column</property>
