--- a/pyanaconda/ui/gui/spokes/source.ui
+++ b/pyanaconda/ui/gui/spokes/source.ui
@@ -218,7 +218,6 @@
   <object class="AnacondaSpokeWindow" id="sourceWindow">
     <property name="startup_id">filler</property>
     <property name="can_focus">False</property>
-    <property name="border_width">6</property>
     <property name="startup_id">filler</property>
     <property name="window_name">INSTALL SOURCE</property>
     <signal name="back-clicked" handler="on_back_clicked" swapped="no"/>
@@ -239,6 +238,9 @@
         <child internal-child="alignment">
           <object class="GtkAlignment" id="AnacondaSpokeWindow-alignment1">
             <property name="can_focus">False</property>
+            <property name="yalign">0</property>
+            <property name="xscale">0</property>
+            <property name="yscale">0.5</property>
             <child internal-child="action_area">
               <object class="GtkBox" id="sourceWindow-actionArea">
                 <property name="can_focus">False</property>
