--- a/pyanaconda/ui/gui/spokes/welcome.ui
+++ b/pyanaconda/ui/gui/spokes/welcome.ui
@@ -109,6 +109,15 @@ OS you can rely on.  It's for testing purposes only.</property>
                 <property name="height">1</property>
               </packing>
             </child>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
           </object>
           <packing>
             <property name="expand">True</property>
@@ -140,7 +149,6 @@ OS you can rely on.  It's for testing purposes only.</property>
   <object class="AnacondaStandaloneWindow" id="welcomeWindow">
     <property name="startup_id">filler</property>
     <property name="can_focus">False</property>
-    <property name="border_width">6</property>
     <property name="startup_id">filler</property>
     <property name="mnemonics_visible">False</property>
     <property name="focus_visible">False</property>
@@ -152,6 +160,9 @@ OS you can rely on.  It's for testing purposes only.</property>
         <child internal-child="nav_area">
           <object class="GtkGrid" id="AnacondaStandaloneWindow-nav_area1">
             <property name="can_focus">False</property>
+            <child>
+              <placeholder/>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -162,6 +173,9 @@ OS you can rely on.  It's for testing purposes only.</property>
         <child internal-child="alignment">
           <object class="GtkAlignment" id="AnacondaStandaloneWindow-alignment1">
             <property name="can_focus">False</property>
+            <property name="yalign">0</property>
+            <property name="xscale">0</property>
+            <property name="yscale">0.5</property>
             <child internal-child="action_area">
               <object class="GtkBox" id="welcomeWindow-actionArea">
                 <property name="can_focus">False</property>
